2007-03-12  Achraf cherti
	* file selector locale error fixed (firegpg-strings inserted 
	  into options.xul)

2007-03-12  Maximilien Cuony
	* Fixed Windows compatibility !
	* Gmail's new windows support !
	* Fixed popup menu's problem
	* Version 0.2.2 Packed, and uploaded to the server !

2007-03-11  Maximilien Cuony
	* Cslected more intelligent
	* Fix the problem with two messages 'Selectionnez une partie de votre mail'
	* Improve some performaces of cgmail
	* Changed text for the password's input
	* Support fire Gmail's plain text editing
	* Version 0.2 Packed, and uploaded to the server !
	* Fix stanges passwords bug
	* Version 0.2.1 Packed, and uploaded to the server !

2007-03-10  Achraf cherti
	* "always show in a new window" checkbox implemented
	* First online release of the website and the extension
	* Crypter/Décrypter -> Chiffrer/Déchiffrer

2007-03-08  Maximilien Cuony
	* Solved the <br>\n<br> bug in cselect
	* Begging of gmail's butons implementation (DON'T USE IT)
	* Resolve &lt; problem
	* Gmail suppot finish !

2007-03-08  Achraf cherti
	* GPG.selfTest() is now not called from overlay, but from cgpg.js
	  in the member functions (decrypt, crypt, verify, sign).
	* the website (in comment) is only showed if it's activated in 
	  options.xul.
	* the indentation is fixed in gmail.js and gpg*js.
	* Some things in french/english locale are fixed.

2007-03-08  Maximilien Cuony
	* Interface for Gmail !
	* Option use Gmail is used
	* Add a 'Need restart' for string of Gmail use's option
	* Cgmail try now to check autenticity of mails.
	* New function in Cselct : wash, for get usable strings form HTML sources
	* Add decrypt system for Cgmail

2007-03-07  Achraf cherti
	* it's possible in options.xul to select the gpg path (with the file picker).
	* gpg-path textbox and button is enabled/disabled when the checkbox is checked/unchecked.
	* check box "always sign or verify in a new window" is added.

2007-03-07  Maximilien Cuony
	* Compatibility with FF 1.5