@@ -25,3 +25,6 @@
 <!ENTITY firegpgMenu.labelImport "Import">
 <!ENTITY firegpgContext.labelImport "Import">
 <!ENTITY firegpgToolbar.labelImport "Import">
+!ENTITY firegpgMenu.labelExport "Export">
+<!ENTITY firegpgContext.labelExport "Export">
+<!ENTITY firegpgToolbar.labelExport "Export">
